补充建模依据

--- a/work_with_sequence.ipynb
+++ b/work_with_sequence.ipynb
@@ -15,7 +15,7 @@
     "$$\n",
     "P(x_t\\mid x_{t-1},\\ldots,x_1)=P(x_t\\mid f(x_{t-1},\\ldots,x_1))\n",
     "$$\n",
-    "其中$f(x_{t-1},\\ldots,x_1)$就是模型的输出。  \n",
+    "其中$f(x_{t-1},\\ldots,x_1)$就是模型的输出，当采用one-hot编码时，$f(x_{t-1},\\ldots,x_1)$就是$P(x_t\\mid x_{t-1},\\ldots,x_1)$。  \n",
     "\n",
     "### 建模方案\n",
     "主要问题：输入数据的数量，输入$x_{t-1},\\ldots,x_1$本身因$t$而异。也就是说，输入数据的数量这个数字将会随着我们遇到的数据量的增加而增加，因此需要一个近似方法来使这个计算变得容易处理。  \n",
